Interim: crossover-parallel; naming conflict WIP.